update vid banner

--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
                     <div class="header__banner__vidContainer__backgroundWrapper__vidWrapper">
                         <video preload="metadata" 
                             style="object-fit:cover;object-position:center top;/* display: none; */" 
-                            data-testid="hero:video" playsinline="" loop="" muted=""  autoplay=""
-                            class="" data-object-fit="cover" 
-                            data-object-position="center top">
+                            playsinline="" loop="" muted=""  autoplay=""
+                            class="">
                             <!-- <source src="/static/hero-blurred-7572101a2ce5e003b66483b7fe5c5d36.webm" type="video/webm"> -->
                             <source src="./assets/vid/opening.mp4" type="video/mp4">
                         </video>
@@ -78,9 +77,8 @@
                         <div class="header__banner__vidContainer__foreGroundWrapper__foreGroundVid__Wrapper">
                             <video preload="metadata" 
                                 style="object-fit:cover;object-position:center top;/* display: none; */" 
-                                data-testid="hero:video" playsinline="" loop="" muted=""  autoplay=""
-                                class="" data-object-fit="cover" 
-                                data-object-position="center top">
+                                playsinline="" loop="" muted=""  autoplay=""
+                                class="">
                                 <!-- <source src="/static/hero-blurred-7572101a2ce5e003b66483b7fe5c5d36.webm" type="video/webm"> -->
                                 <source src="./assets/vid/opening.mp4" type="video/mp4">
                             </video>
