update vid banner

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <section class="header__banner__vidContainer">
                 <div class="header__banner__vidContainer__backgroundWrapper">
                     <div class="header__banner__vidContainer__backgroundWrapper__vidWrapper">
-                        <video preload="metadata" 
+                        <video  
                             style="object-fit:cover;object-position:center top;/* display: none; */" 
                             playsinline="" loop="" muted=""  autoplay=""
                             class="">
@@ -75,7 +75,7 @@
                 <div class="header__banner__vidContainer__foreGroundWrapper">
                     <div class="header__banner__vidContainer__foreGroundWrapper__foreGroundVid">
                         <div class="header__banner__vidContainer__foreGroundWrapper__foreGroundVid__Wrapper">
-                            <video preload="metadata" 
+                            <video  
                                 style="object-fit:cover;object-position:center top;/* display: none; */" 
                                 playsinline="" loop="" muted=""  autoplay=""
                                 class="">
