--- a/index.html
+++ b/index.html
@@ -111,6 +111,17 @@
     
     
     <div id="content" class="content">
+        <div class="threeBtns">
+            <div class="btnContainer">
+                <a href="./pages/news7.html">Bộ sưu tập</a>
+            </div>
+            <div class="btnContainer">
+                <a href="./pages/news8.html">Đăng ký</a>
+            </div>
+            <div class="btnContainer">
+                <a href="./pages/news9.html">Bán hàng</a>
+            </div>
+        </div>
         <div class="content__latest">
             <div class="content__latest__latestBackground">
                 <div class="backgroundGradient"></div>
