--- a/pages/news2.html
+++ b/pages/news2.html
@@ -36,7 +36,7 @@
                 </div>
                 <a href="#" class="header__menu__centerContent__title">Vũ Trụ</a>
                 <ul class="header__menu__centerContent__navigation">
-                    <li><a href="#"><p>Tướng</p></a></li>
+                    <li><a href="./news10.html"><p>Tướng</p></a></li>
                     <li><a href="#"><p>Khu vực</p></a></li>
                     <li><a href="#"><p>Vũ trụ song song
                         <svg width="10" height="5" class="_16evwnRjE9JvfFbOuuC-EF _1lBECl9xmO0n7vnCvf6_dD" viewBox="0 0 8 5"><title>mainNavArrowDown</title><path d="M.707 1.707l2.586 2.586a1 1 0 001.414 0l2.586-2.586C7.923 1.077 7.477 0 6.586 0H1.414C.524 0 .077 1.077.707 1.707z" fill="#7E7E7E"></path></svg>
