--- a/pages/news10.html
+++ b/pages/news10.html
@@ -104,8 +104,8 @@
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>Naafiri</h3>
+                                    <h1>Surima</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -123,16 +123,16 @@
                     </a>
                 </li>
                 <li class="itemGridSmall allGridItem" style="float: left;">
-                    <a href="../pages/news1.html">
+                    <a href="../pages/news2.html">
                         <div class="itemContent">
-                            <div class="itemBackground" style="background-image: url('../assets/img/naafiri.jpg');"></div>
+                            <div class="itemBackground" style="background-image: url('../assets/img/milio-splash.jpg');"></div>
                             <div class="itemBottom">
                                 <div class="itemTitles">
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>Milio</h3>
+                                    <h1>Ixtal</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -150,16 +150,16 @@
                     </a>
                 </li>
                 <li class="itemGridSmall allGridItem" style="float: left;">
-                    <a href="../pages/news1.html">
+                    <a href="../pages/news3.html">
                         <div class="itemContent">
-                            <div class="itemBackground" style="background-image: url('../assets/img/naafiri.jpg');"></div>
+                            <div class="itemBackground" style="background-image: url('../assets/img/ksante-splash.jpg');"></div>
                             <div class="itemBottom">
                                 <div class="itemTitles">
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>K'sante</h3>
+                                    <h1>Surima</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -177,16 +177,16 @@
                     </a>
                 </li>
                 <li class="itemGridSmall allGridItem" style="float: left;">
-                    <a href="../pages/news1.html">
+                    <a href="../pages/news4.html">
                         <div class="itemContent">
-                            <div class="itemBackground" style="background-image: url('../assets/img/naafiri.jpg');"></div>
+                            <div class="itemBackground" style="background-image: url('../assets/img/nilah-splash.jpg');"></div>
                             <div class="itemBottom">
                                 <div class="itemTitles">
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>NILAH</h3>
+                                    <h1>BILGEWATER</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -204,16 +204,16 @@
                     </a>
                 </li>
                 <li class="itemGridSmall allGridItem" style="float: left;">
-                    <a href="../pages/news1.html">
+                    <a href="../pages/news5.html">
                         <div class="itemContent">
-                            <div class="itemBackground" style="background-image: url('../assets/img/naafiri.jpg');"></div>
+                            <div class="itemBackground" style="background-image: url('../assets/img/belveth-splash.jpg');"></div>
                             <div class="itemBottom">
                                 <div class="itemTitles">
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>Bel'Veth</h3>
+                                    <h1>Hư không</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -233,16 +233,16 @@
             </ul>
             <ul class="champsRow">
                 <li class="itemGridSmall allGridItem" style="float: left;">
-                    <a href="../pages/news1.html">
+                    <a href="../pages/news6.html">
                         <div class="itemContent">
-                            <div class="itemBackground" style="background-image: url('../assets/img/naafiri.jpg');"></div>
+                            <div class="itemBackground" style="background-image: url('../assets/img/rammus.jpg');"></div>
                             <div class="itemBottom">
                                 <div class="itemTitles">
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>Rammus</h3>
+                                    <h1>Surima</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -260,16 +260,16 @@
                     </a>
                 </li>
                 <li class="itemGridSmall allGridItem" style="float: left;">
-                    <a href="../pages/news1.html">
+                    <a href="#">
                         <div class="itemContent">
-                            <div class="itemBackground" style="background-image: url('../assets/img/naafiri.jpg');"></div>
+                            <div class="itemBackground" style="background-image: url('../assets/img/Elise.jpg');"></div>
                             <div class="itemBottom">
                                 <div class="itemTitles">
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>Elise</h3>
+                                    <h1>QUẦN ĐẢO BÓNG ĐÊM</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -287,16 +287,16 @@
                     </a>
                 </li>
                 <li class="itemGridSmall allGridItem" style="float: left;">
-                    <a href="../pages/news1.html">
+                    <a href="#">
                         <div class="itemContent">
-                            <div class="itemBackground" style="background-image: url('../assets/img/naafiri.jpg');"></div>
+                            <div class="itemBackground" style="background-image: url('../assets/img/KogMaw_0.jpg');"></div>
                             <div class="itemBottom">
                                 <div class="itemTitles">
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>Kog'Maw</h3>
+                                    <h1>Hư không</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -314,16 +314,16 @@
                     </a>
                 </li>
                 <li class="itemGridSmall allGridItem" style="float: left;">
-                    <a href="../pages/news1.html">
+                    <a href="#">
                         <div class="itemContent">
-                            <div class="itemBackground" style="background-image: url('../assets/img/naafiri.jpg');"></div>
+                            <div class="itemBackground" style="background-image: url('../assets/img/Kayn.jpg');"></div>
                             <div class="itemBottom">
                                 <div class="itemTitles">
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>Kayn</h3>
+                                    <h1>Ionia</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -341,16 +341,16 @@
                     </a>
                 </li>
                 <li class="itemGridSmall allGridItem" style="float: left;">
-                    <a href="../pages/news1.html">
+                    <a href="#">
                         <div class="itemContent">
-                            <div class="itemBackground" style="background-image: url('../assets/img/naafiri.jpg');"></div>
+                            <div class="itemBackground" style="background-image: url('../assets/img/Leblanc_0.jpg');"></div>
                             <div class="itemBottom">
                                 <div class="itemTitles">
                                     <div class="itemIcon" style="padding-left: 0px">
                                         <img src="../assets/img/itemIcon.png" alt="iconChampion">
                                     </div>
-                                    <h3>Chó săn khát máu</h3>
-                                    <h1>Naafiri</h1>
+                                    <h3>Leblanc</h3>
+                                    <h1>Noxus</h1>
                                 </div>
                                 <div class="itemButton">
                                     <span class="btnText">Khám phá</span>
@@ -388,7 +388,5 @@
             </a>
         </div>
     </footer>
-    
-    
 </body>
 </html>
